# interactive-virtual-creatures

./: .gitmodules  App.cpp  App.h  BaseNode.cpp  BaseNode.h  BodyConnection.cpp  BodyConnection.h  BodyPart.cpp  BodyPart.h  CMakeLists.txt  Constants.h  Creature.cpp  Creature.h  DNA.cpp  DNA.h  Gate.cpp  Gate.h  IDHandler.h  JointEffector.cpp  JointEffector.h  JointSensor.cpp  JointSensor.h  MorphNode.cpp  MorphNode.h  Mutator.h  PhysicalCreature.cpp  PhysicalCreature.h  PhysicsWorld.cpp  PhysicsWorld.h  README.md  RootMorphNode.cpp  RootMorphNode.h  Shader.h  ShapeHandler.h  main.cpp
App/: App.cpp  App.h  Camera.h  GUIWindow.cpp  GUIWindow.h  NeuronVisualizer.cpp  NeuronVisualizer.h
Body/: BaseNode.cpp  BaseNode.h  MorphNode.cpp  MorphNode.h  PhysicalCreature.cpp  PhysicalCreature.h  RootMorphNode.cpp  RootMorphNode.h
Control/: ContactSensor.cpp  ContactSensor.h  Gate.cpp  Gate.h  IDHandler.cpp  IDHandler.h  Neuron.cpp  Neuron.h  NeuronCluster.cpp  NeuronCluster.h
Control/Joints/: JointEffector.cpp  JointEffector.h  JointSensor.cpp  JointSensor.h
Control/Neurons/: Neuron.cpp  Neuron.h  NeuronFactory.cpp  NeuronFactory.h  Neuron_OneInput.cpp  Neuron_OneInput.h  Neuron_TwoInputs.cpp  Neuron_TwoInputs.h  Neuron_ZeroInputs.cpp  Neuron_ZeroInputs.h
Control/Neurons/TwoInputs/: Neuron_Max.cpp  Neuron_Max.h  Neuron_Min.cpp  Neuron_Min.h  Neuron_Sum.cpp  Neuron_Sum.h  Neuron_TwoInputs.cpp  Neuron_TwoInputs.h
Control/Neurons/ZeroInputs/: Neuron_Constant.cpp  Neuron_Constant.h
Evolution/: EvoConfig.cpp  EvoConfig.h  EvoData.cpp  EvoData.h  Evolver.cpp  Evolver.h
Neurons/: Neuron.cpp  Neuron.h  Neuron_Max.h  Neuron_Min.cpp  Neuron_Min.h  Neuron_Sum.cpp  Neuron_Sum.h
Neurons/TwoInputs/: Neuron_Max.cpp  Neuron_Max.h
Physics/: ContactReporter.h  Evolver.cpp  Evolver.h  LiveEnvironment.cpp  LiveEnvironment.h  PhysicsBase.cpp  PhysicsBase.h  PhysicsScene.cpp  PhysicsScene.h
Res/: Shader.h  ShapeHandler.cpp  ShapeHandler.h  glad.c  neuron.frag  shader.frag  stb_image.h
Res/GLAD/include/glad/: glad.h
Res/glfw-build/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
Res/glfw-build/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  offscreen  particles  sharing  simple  splitview  wave
Res/glfw-build/src/: Makefile  cmake_install.cmake
Res/glfw-build/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  opacity  reopen  tearing  threads  timeout  title  triangle-vulkan  windows
World/: PhysicsWorld.cpp  PhysicsWorld.h
